// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
}
"
`;

exports[`List of strings, locations and references schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
}

type EntityInfo {
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  strings: [String!]
  locations: [Location!]
  bars: [Bar!]
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

type AdminEntityInfo {
  type: EntityType!
  name: String!
  version: Int!
  publishingState: EntityPublishState!
}

input AdminEntityCreateInfo {
  type: EntityType
  name: String!
}

input AdminEntityUpdateInfo {
  type: EntityType
  name: String
}

interface AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFooFields {
  strings: [String!]
  locations: [Location!]
  bars: [AdminBar!]
}

type AdminFoo implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
  fields: AdminFooFields!
}

input AdminFooFieldsInput {
  strings: [String!]
  locations: [LocationInput!]
  bars: [AdminReferenceInput!]
}

input AdminFooCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
  fields: AdminFooFieldsInput
}

input AdminFooUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
  fields: AdminFooFieldsInput
}

type AdminBar implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

input AdminBarCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
}

input AdminBarUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
}
"
`;

exports[`Multiple references with entityTypes schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
  Baz
}

type EntityInfo {
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  noMeansAll: Entity
  bar: Bar
  bazBar: _BarOrBaz
  fooBarBaz: _BarOrBazOrFoo
  barBarBar: Bar
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

type Baz implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

type AdminEntityInfo {
  type: EntityType!
  name: String!
  version: Int!
  publishingState: EntityPublishState!
}

input AdminEntityCreateInfo {
  type: EntityType
  name: String!
}

input AdminEntityUpdateInfo {
  type: EntityType
  name: String
}

interface AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFooFields {
  noMeansAll: AdminEntity
  bar: AdminBar
  bazBar: _AdminBarOrBaz
  fooBarBaz: _AdminBarOrBazOrFoo
  barBarBar: AdminBar
}

type AdminFoo implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
  fields: AdminFooFields!
}

input AdminFooFieldsInput {
  noMeansAll: AdminReferenceInput
  bar: AdminReferenceInput
  bazBar: AdminReferenceInput
  fooBarBaz: AdminReferenceInput
  barBarBar: AdminReferenceInput
}

input AdminFooCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
  fields: AdminFooFieldsInput
}

input AdminFooUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
  fields: AdminFooFieldsInput
}

type AdminBar implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

input AdminBarCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
}

input AdminBarUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
}

type AdminBaz implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

input AdminBazCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
}

input AdminBazUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
}

enum _BarOrBaz {
  Bar
  Baz
}

enum _BarOrBazOrFoo {
  Bar
  Baz
  Foo
}

enum _AdminBarOrBaz {
  AdminBar
  AdminBaz
}

enum _AdminBarOrBazOrFoo {
  AdminBar
  AdminBaz
  AdminFoo
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
  createBazEntity(entity: AdminBazCreateInput!): AdminBaz
  updateBazEntity(entity: AdminBazUpdateInput!): AdminBaz
}
"
`;

exports[`One empty entity type schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
}

type EntityInfo {
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

type AdminEntityInfo {
  type: EntityType!
  name: String!
  version: Int!
  publishingState: EntityPublishState!
}

input AdminEntityCreateInfo {
  type: EntityType
  name: String!
}

input AdminEntityUpdateInfo {
  type: EntityType
  name: String
}

interface AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFoo implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

input AdminFooCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
}

input AdminFooUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
}
"
`;

exports[`Rich text schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
}

type EntityInfo {
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  body: RichText
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

type AdminEntityInfo {
  type: EntityType!
  name: String!
  version: Int!
  publishingState: EntityPublishState!
}

input AdminEntityCreateInfo {
  type: EntityType
  name: String!
}

input AdminEntityUpdateInfo {
  type: EntityType
  name: String
}

interface AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFooFields {
  body: AdminRichText
}

type AdminFoo implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
  fields: AdminFooFields!
}

input AdminFooFieldsInput {
  body: AdminRichTextInput
}

input AdminFooCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
  fields: AdminFooFieldsInput
}

input AdminFooUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
  fields: AdminFooFieldsInput
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
}
"
`;

exports[`Two entity types with reference schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
}

type EntityInfo {
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  fooField: String
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type BarFields {
  barField1: String
  barField2: Entity
  barField3: Location
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: BarFields!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

type AdminEntityInfo {
  type: EntityType!
  name: String!
  version: Int!
  publishingState: EntityPublishState!
}

input AdminEntityCreateInfo {
  type: EntityType
  name: String!
}

input AdminEntityUpdateInfo {
  type: EntityType
  name: String
}

interface AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFooFields {
  fooField: String
}

type AdminFoo implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
  fields: AdminFooFields!
}

input AdminFooFieldsInput {
  fooField: String
}

input AdminFooCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
  fields: AdminFooFieldsInput
}

input AdminFooUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
  fields: AdminFooFieldsInput
}

type AdminBarFields {
  barField1: String
  barField2: AdminEntity
  barField3: Location
}

type AdminBar implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
  fields: AdminBarFields!
}

input AdminBarFieldsInput {
  barField1: String
  barField2: AdminReferenceInput
  barField3: LocationInput
}

input AdminBarCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
  fields: AdminBarFieldsInput
}

input AdminBarUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
  fields: AdminBarFieldsInput
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
}
"
`;

exports[`Value type schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
}

type EntityInfo {
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

enum ValueType {
  ValueOne
  ValueList
  NestedValue
}

interface Value {
  _type: ValueType!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  valueOne: ValueOne
  unspecifiedValue: Value
  valueOneOrList: _ValueListOrValueOne
  nestedValue: NestedValue
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

type ValueOne implements Value {
  _type: ValueType!
  one: String
  two: Bar
  three: Location
}

type ValueList implements Value {
  _type: ValueType!
  one: [String!]
  two: [Bar!]
  three: [Location!]
}

type NestedValue implements Value {
  _type: ValueType!
  text: String
  child: NestedValue
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

type AdminEntityInfo {
  type: EntityType!
  name: String!
  version: Int!
  publishingState: EntityPublishState!
}

input AdminEntityCreateInfo {
  type: EntityType
  name: String!
}

input AdminEntityUpdateInfo {
  type: EntityType
  name: String
}

interface AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

interface AdminValue {
  _type: ValueType!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFooFields {
  valueOne: AdminValueOne
  unspecifiedValue: AdminValue
  valueOneOrList: _AdminValueListOrValueOne
  nestedValue: AdminNestedValue
}

type AdminFoo implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
  fields: AdminFooFields!
}

input AdminFooFieldsInput {
  valueOneJson: String
  valueOne: AdminValueOneInput
  unspecifiedValueJson: String
  valueOneOrListJson: String
  nestedValueJson: String
  nestedValue: AdminNestedValueInput
}

input AdminFooCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
  fields: AdminFooFieldsInput
}

input AdminFooUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
  fields: AdminFooFieldsInput
}

type AdminBar implements AdminEntity {
  id: ID!
  info: AdminEntityInfo!
}

input AdminBarCreateInput {
  id: ID
  info: AdminEntityCreateInfo!
}

input AdminBarUpdateInput {
  id: ID!
  info: AdminEntityUpdateInfo
}

type AdminValueOne implements AdminValue {
  _type: ValueType!
  one: String
  two: AdminBar
  three: Location
}

input AdminValueOneInput {
  _type: ValueType!
  one: String
  two: AdminReferenceInput
  three: LocationInput
}

type AdminValueList implements AdminValue {
  _type: ValueType!
  one: [String!]
  two: [AdminBar!]
  three: [Location!]
}

input AdminValueListInput {
  _type: ValueType!
  one: [String!]
  two: [AdminReferenceInput!]
  three: [LocationInput!]
}

type AdminNestedValue implements AdminValue {
  _type: ValueType!
  text: String
  child: AdminNestedValue
}

input AdminNestedValueInput {
  _type: ValueType!
  text: String
  childJson: String
  child: AdminNestedValueInput
}

enum _ValueListOrValueOne {
  ValueList
  ValueOne
}

enum _AdminValueListOrValueOne {
  AdminValueList
  AdminValueOne
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
}
"
`;
